--- a/login.css
+++ b/login.css
@@ -64,7 +64,8 @@ header{
     position: relative;
 }
 
-.body1::before {
+
+.body1::after {
     content: "";
     position: absolute;
     background-image: url('https://pirg.org/edfund/wp-content/uploads/2021/09/rock-waste-dump-landfill-348762-Alan-Levine-pxhere.com-w.jpg');
@@ -74,72 +75,94 @@ header{
     right: 0px;
     bottom: 0px;
     left: 0px;
-    opacity: 0.2;
+    opacity: 0.4;
+    z-index: -1;
 }
-h2{
-    font-size: 6em;
+.login-logo{
+    font-size: 3em;
     color: black;
+    text-align: center;
+    position:relative;
+    top: -30px;
+
 }
 
-
-/* button to find near Garbage Plant Near You */
-.btn1{
-    display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn1 .btnfind{
-    height: 75px;
-    width: 200px;
-    background-color: #16FF00;
-    color: black;
-    border-radius: 10%;
-    margin-top: 5%;
-    font-size: 1.7em;
+.input-form{
     position: relative;
+    width: 100%;
+    height: 50px;
+    z-index: 1;
+    margin: 20px 0;
+    border-bottom: 2px solid black ;
+    top: -20;
+}
+
+.input-form label{
+    position: absolute;
+    top: 50%;
+    left: 0px;
+    /* transform: scaleY(-50%); */
+    pointer-events: none;
+    transition: .5s;
+    }
+
+.input-form input{
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    margin-top: 10%;
+}
+
+.input-form input:focus~label,
+.input-form input:valid~label {
+    top: -5px;
+}
+
+.input-form .icon-login{
+    position: absolute;
+    right: 8px;
+    top: 20px;
+    
+}
+
+.box-login{
+    position: relative;
+    background-color: transparent;
+    border: 5px solid rgb(255, 255, 255, .9);
+    width: 420px;
+    height: 500px;
+    border-radius: 30px;
+    backdrop-filter:blur(50px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 60%;
-    margin-top: 13%;
-  }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-
-  th{
-    background-color:darkgreen;
-    color: #fff;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #9fc09f;
-  }
-
-  #table{
+.btnlogin{
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-  }
+    margin: 30px;
+    z-index: 2;
+}
 
-  .h2price{
+.btnlogin button{
     position: absolute;
-    top: 100;
-    font-size: 4em;
-    text-decoration: underline #7AA874 5px;
-  }
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
 
+}
 
+.textlogin{
+    margin: 20px 20px;
+}
 
-
-
-
-
+.btnlogin button:hover{
+    background-color: #183A1D;
+    color: aqua;
+}
