--- a/sellpage.css
+++ b/sellpage.css
@@ -50,3 +50,97 @@ header{
 .navigation a:hover::after{
     transform: scale(1);
 }
+
+body{
+    background-color: #C1D5A4;
+    background-size: cover;}
+
+.wrapper{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.sell-box{
+    width: 80%;
+    height: 750px;
+    top: 50px;
+    left: 0px;
+    position: relative;
+    border: none;
+    border-radius: 20px;
+    display: flex;
+    /* justify-content: center; */
+    background-color: rgba(255, 255, 255, 0.7);
+    color: black;
+    padding: 20px 20px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.table-1 table{
+    position: relative;
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 30px;
+    /* border-style: hidden; */
+    /* box-shadow: 0 0 0 1px #dddddd; */
+}
+
+.table-1{
+    position: relative;
+    width: 90%;
+    height: 2700px;
+    margin-top: 40px;
+    overflow-x: hidden;
+}
+
+th, td{
+    position: relative;
+    border: 1px solid #dddddd;
+    /* border-radius: 10px; */
+    text-align: center;
+    padding: 8px;
+    font-size: larger;
+    padding: 20px;
+}
+
+td button{
+    width: 50px;
+    height: 25px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+td button:hover{
+    background-color: #183A1D;
+    color:aqua;
+}
+
+.price{
+    position: relative;
+    margin-top: 50px;
+}
+
+.btn-sell{
+    position:relative;
+    width: 20%;
+    height: 100%;
+}
+
+.btn-sell button{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-top: 30px;
+}
+
+.btn-sell button:hover{
+    background-color: #183A1D;
+    color: aqua;
+}
+
