Final work commit

--- a/Flask/templates/new.html
+++ b/Flask/templates/new.html
@@ -36,10 +36,10 @@
             </div>
           </div> -->
         <div class="box-con">
-            <h4>การจัดการขยะมูลฝอยตามแนวคิด 3Rs (ตอนที่1)</h4>
+            <h4> {{new.Title}} </h4>
             <p><img src="../static/image/Talking-Trash.jpg" alt="trash">
             <p class="text-secondary">
-                Reduce (ลดการใช้) เป็นการปรับเปลี่ยนพฤติกรรมของตัวเราเองในการใช้สินค้าและการบริการต่างๆ โดยคำนึงถึงผลกระทบที่จะเกิดขึ้น เช่น ขยะที่จะเกิดขึ้น การใช้พลังงานในการผลิต
+                {{new.Description}}
             </p>
             
         </div>
@@ -47,10 +47,10 @@
             <hr>
         </div>
         <div class="box-con">
-            <h4>งานบริการของ ศูนย์รับบริการย่อยทำลายเอกสารความลับฟรี</h4>
+            <h4>{{new.Title2}}</h4>
             <p><img src="../static/image/Talking-Trash.jpg" alt="trash">
             <p class="text-secondary">
-                ศูนย์ย่อยทำลายเอกสารความลับสุดยอดฟรี The Top Secret Document Destruction Free วงษ์พาณิชย์ร่มเกล้า รีไซเคิล ..เปิดเป็นศูนย์ย่อยทำลายเอกสารความลับสุดยอดฟรี ตั้งแต่ ปี 2553
+                {{new.Description2}}
             </p>
             
         </div>
@@ -58,10 +58,10 @@
             <hr>
         </div>
         <div class="box-con">
-            <h4>การประหยัดน้ำจากแนวคิด 3Rs</h4>
+            <h4>{{new.Title3}}</h4>
             <p><img src="../static/image/Talking-Trash.jpg" alt="trash">
             <p class="text-secondary">
-                3Rs คือ(Reduce,Reuse,Recycle) ที่เราสามารถนำหลักการของ 3Rsมาเป็นแนวคิดในการประหยัดน้ำได้
+                {{new.Description3}}
             </p>
             
         </div>
@@ -69,10 +69,10 @@
             <hr>
         </div>
         <div class="box-con">
-            <h4>3rs คืออะไร - หลักการณ์ของ 3rs</h4>
+            <h4>{{new.Title4}}</h4>
             <p><img src="../static/image/Talking-Trash.jpg" alt="trash">
             <p class="text-secondary">
-                3rs คือ  Reduce,Reuse,Recycle  เราจะเริ่มต้นจาก R ตัวแรกก่อนนะค่ะ
+                {{new.Description4}}
             </p>
             
         </div>
